fix: Updating picomatch and all-contributors-cli (#3821)

--- a/packages/rest/test/assets/test-import.html
+++ b/packages/rest/test/assets/test-import.html
@@ -12,7 +12,7 @@
           "qs": "https://esm.sh/qs?min",
           "xcase": "https://esm.sh/xcase?min",
           "rate-limiter-flexible": "https://esm.sh/rate-limiter-flexible?min",
-          "picomatch-browser": "https://esm.sh/picomatch-browser?min",
+          "picomatch": "https://esm.sh/picomatch?min",
           "@gitbeaker/requester-utils": "../../../requester-utils/dist/index.mjs",
           "@gitbeaker/core": "../../../core/dist/index.mjs"
         }
