fix: Replace `qs` with `picoquery` (#3822)

--- a/packages/rest/test/assets/test-import.html
+++ b/packages/rest/test/assets/test-import.html
@@ -9,7 +9,7 @@
     <script type="importmap">
       {
         "imports": {
-          "qs": "https://esm.sh/qs?min",
+          "picoquery": "https://esm.sh/picoquery?min",
           "xcase": "https://esm.sh/xcase?min",
           "rate-limiter-flexible": "https://esm.sh/rate-limiter-flexible?min",
           "picomatch": "https://esm.sh/picomatch?min",
